removed useless comments and all console logs

--- a/listing.html
+++ b/listing.html
@@ -89,32 +89,24 @@
               class="grid gap-3 md:grid-cols-[6fr_5fr]"
               id="listing-container"
             >
-              <!-- image -->
               <div
                 class="relative min-h-[24rem] animate-pulse overflow-hidden rounded-md bg-neutral-300 sm:min-h-[36rem] md:h-[38rem]"
               ></div>
-              <!-- primary -->
               <div class="flex flex-col justify-between gap-5">
-                <!-- upper -->
                 <div class="flex flex-col gap-5">
-                  <!-- title -->
                   <div
                     class="h-12 animate-pulse rounded-md bg-neutral-300"
                   ></div>
-                  <!-- current bid -->
                   <div class="flex flex-col">
                     <div
                       class="h-10 animate-pulse rounded-md bg-neutral-300"
                     ></div>
                   </div>
-                  <!-- ending in -->
                   <div class="flex flex-col">
                     <div
                       class="h-10 animate-pulse rounded-md bg-neutral-300"
                     ></div>
                   </div>
-
-                  <!-- lower -->
                   <div class="flex flex-col gap-2">
                     <div
                       class="h-4 animate-pulse rounded-md bg-neutral-300"
@@ -130,22 +122,9 @@
                   </div>
                 </div>
               </div>
-
-              <!-- secondary -->
               <div class="flex flex-col gap-5">
-                <!-- description -->
-                <div>
-                  <div
-                    class="h-32 animate-pulse rounded-md bg-neutral-300"
-                  ></div>
-                </div>
-
-                <!-- others -->
-                <div>
-                  <div
-                    class="h-20 animate-pulse rounded-md bg-neutral-300"
-                  ></div>
-                </div>
+                <div class="h-32 animate-pulse rounded-md bg-neutral-300"></div>
+                <div class="h-20 animate-pulse rounded-md bg-neutral-300"></div>
               </div>
             </div>
           </div>
