--- a/profile.html
+++ b/profile.html
@@ -301,7 +301,7 @@
             >
               <button
                 class="w-fit cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
-                id="load-button"
+                id="pagination-button"
               >
                 Load more
               </button>
